--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/css/style.css" rel="stylesheet">
     <script src="https://samueljesusdev.github.io/home-page-bootstrap-vue/script.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+   <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 
 <body>
