--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Document</title>
     <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/css/style.css" rel="stylesheet">
     <script src="https://samueljesusdev.github.io/home-page-bootstrap-vue/script.js"></script>
-   <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/css/responsive.css" rel="stylesheet">
+   <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/css/bootstrap.min.css">
+    <link href="https://samueljesusdev.github.io/home-page-bootstrap-vue/css/responsive.css">
 </head>
 
 <body>
